fix: Removing password

--- a/AirQuality/AirQuality/appsettings.json
+++ b/AirQuality/AirQuality/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LearningDBCon": "Data Source=learning-sever.database.windows.net;Initial Catalog=AirQualityData;User Id=CiaranM;password=%C1aranLearn1ng95%"
+    "LearningDBCon": "Data Source=learning-sever.database.windows.net;Initial Catalog=AirQualityData;User Id=CiaranM;password="
   },
   "Logging": {
     "LogLevel": {
